<resources>
    <string name="app_name">Trabalho II Charles</string>
    <string name="valve_corporation">Valve Corporation</string>
    <string name="valve_corporation_tamb_m_conhecida_como_valve_software_e_comumente_referida_como_valve_uma_empresa_norte_americana_desenvolvedora_de_jogos_eletr_nicos_e_de_distribui_o_digital_com_sede_na_cidade_de_bellevue_estado_de_washington_seu_escrit_rio_subsediado_em_luxemburgo_para_as_regi_es_europeias_valve_s_a_r_l_foi_aberto_em_2012_fundada_em_1996_como_valve_l_l_c_pelos_ex_funcion_rios_da_microsoft_gabe_newell_e_mike_harrington">Valve Corporation (também conhecida como Valve Software, e comumente referida como Valve) é uma empresa norte-americana desenvolvedora de jogos eletrônicos e de distribuição digital, com sede na cidade de Bellevue, estado de Washington. Seu escritório subsediado em Luxemburgo para as regiões europeias, Valve S.a.r.l, foi aberto em 2012. Fundada em 1996 como Valve L.L.C. pelos ex-funcionários da Microsoft Gabe Newell e Mike Harrington.</string>
    <string name="pr_xima_p_gina">Próxima Página</string>
    <string name="todo">TODO</string>
    <string name="a_s_rie_half_life_recebeu_avalia_es_positivas_na_maioria_das_vezes_que_seus_jogos_foram_avaliados_quanto_jogabilidade_sons_gr_ficos_e_imers_o_por_revistas_especializadas_e_sites_de_avalia_o_de_jogos_eletr_nicos_a_publica_o_de_seus_jogos_causou_maior_impacto_no_p_blico_quando_foram_lan_ados_o_half_life_e_o_half_life_2_respectivamente_sendo_este_ltimo_aclamado_como_jogo_ganhador_de_mais_de_50_t_tulos_e_ganhador_do_melhor_jogo_de_sempre_pela_revista_pc_gamer_devido_ao_grande_sucesso_da_franquia_fans_do_jogo_aguardam_mesmo_a_valve_n_o_confirmando_o_lan_amento_ou_o_anuncio_do_terceiro_jogo_da_s_rie_de_sucesso">A série Half-Life recebeu avaliações positivas na maioria das vezes que seus jogos foram avaliados quanto à jogabilidade, sons, gráficos e imersão por revistas especializadas e sites de avaliação de jogos eletrônicos. A publicação de seus jogos causou maior impacto no público quando foram lançados o Half-Life e o Half-Life 2, respectivamente, sendo este último aclamado como […] jogo ganhador de mais de 50 títulos …e Ganhador do Melhor Jogo de Semprepela Revista PC Gamer. Devido ao grande sucesso da franquia, fans do jogo aguardam, mesmo a Valve não confirmando, o lançamento ou o anuncio do terceiro jogo da série de sucesso.</string>
    <string name="tempo_de_mercado_23_anos">Tempo de Mercado: 23 Anos</string>
    <string name="valor_da_empresa_entre_2_e_4_bilh_es_de_d_lares">Valor da empresa: Entre 2 e 4 bilhôes de Dólares</string>
    <string name="ligar">Ligar</string>
    <string name="site">Site</string>
    <string name="compartilhar">Compartilhar</string>
</resources>
