<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".novaTela">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="317dp"
        android:layout_height="261dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="10dp"
        android:text="@string/a_s_rie_half_life_recebeu_avalia_es_positivas_na_maioria_das_vezes_que_seus_jogos_foram_avaliados_quanto_jogabilidade_sons_gr_ficos_e_imers_o_por_revistas_especializadas_e_sites_de_avalia_o_de_jogos_eletr_nicos_a_publica_o_de_seus_jogos_causou_maior_impacto_no_p_blico_quando_foram_lan_ados_o_half_life_e_o_half_life_2_respectivamente_sendo_este_ltimo_aclamado_como_jogo_ganhador_de_mais_de_50_t_tulos_e_ganhador_do_melhor_jogo_de_sempre_pela_revista_pc_gamer_devido_ao_grande_sucesso_da_franquia_fans_do_jogo_aguardam_mesmo_a_valve_n_o_confirmando_o_lan_amento_ou_o_anuncio_do_terceiro_jogo_da_s_rie_de_sucesso"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="312dp"
        android:layout_height="22dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="25dp"
        android:text="@string/tempo_de_mercado_23_anos"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="320dp"
        android:layout_height="44dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="10dp"
        android:text="@string/valor_da_empresa_entre_2_e_4_bilh_es_de_d_lares"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button2"
        android:layout_width="143dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="30dp"
        android:onClick="Ligar"
        android:text="@string/ligar"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/button3"
        android:layout_width="139dp"
        android:layout_height="47dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:onClick="Site"
        android:text="@string/site"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.19999999" />

    <Button
        android:id="@+id/button4"
        android:layout_width="328dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        android:onClick="Compartilhar"
        android:text="@string/compartilhar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

</android.support.constraint.ConstraintLayout>