<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="11dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/valve" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="10dp"
        android:text="@string/valve_corporation"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="342dp"
        android:layout_height="276dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="10dp"
        android:text="@string/valve_corporation_tamb_m_conhecida_como_valve_software_e_comumente_referida_como_valve_uma_empresa_norte_americana_desenvolvedora_de_jogos_eletr_nicos_e_de_distribui_o_digital_com_sede_na_cidade_de_bellevue_estado_de_washington_seu_escrit_rio_subsediado_em_luxemburgo_para_as_regi_es_europeias_valve_s_a_r_l_foi_aberto_em_2012_fundada_em_1996_como_valve_l_l_c_pelos_ex_funcion_rios_da_microsoft_gabe_newell_e_mike_harrington"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="100dp"
        android:onClick="chamaNovaTela"
        android:text="@string/pr_xima_p_gina"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</android.support.constraint.ConstraintLayout>